<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="menumain_addtask">Add Task</string>
    <string name="menumain_showDuration">Durations Report</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showabout">About Task Timer</string>
    <string name="menumain_generate">Generate data</string>
    <string name="no_task_message">No Task Selected.</string>
    <string name="edit_button_description">Button to edit Task details</string>
    <string name="delete_button_description">Button to delete Tasks</string>
    <string name="addedit_name_hint">Task name: required</string>
    <string name="addedit_desciption_hint">Task desciption (optional)</string>
    <string name="addedit_sort_hint">Order: sort low to high</string>
    <string name="addedit_save_text">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.
        \n\nTasks with lower sort orders will be placed higher in the list.Tasks with the same sort
        order will be sorted alphabetically.\n\nTapping a task will start the timer for that task
        (and will stop the timer for any previous task that was being timed).</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldialog_positive_caption">Delete</string>
    <string name="deldialog_message">Deleting will also delete all timing data associated with Task ID %1$d: %2$s.</string>
    <string name="cancelEditDialog_message">You have unsaved changes. Do you want to abandon, or continue to edit?</string>
    <string name="cancelEditDialog_positive_caption">Continue</string>
    <string name="cancelEditDialog_negative_caption">Abandon</string>
    <string name="about_copyright">Copyright \u00a9 2017 LearnProgramming.academy</string>
    <string name="about_weblink_21">Instructions available at www.learnprogramming.academy</string>
    <string name="about_weblink">Instructions available </string>
    <string name="about_url"><u>https://www.learnprogramming.academy</u></string>
    <string name="about_email">For support, email tasktimer@learnprogramming.academy</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org <b>Anonymous</b></string>
</resources>
